objects/Country_Mapping__mdt.object
<CustomObject>
    <description>Country Mapping</description>
    <fields>
        <fullName>Alt_Country_Code__c</fullName>
        <description>Alt Country Code e.g. UK</description>
        <label>Alternative Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code_alpha_2__c</fullName>
        <description>Country Code alpha-2 e.g. GB</description>
        <label>Country Code alpha-2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code_alpha_3__c</fullName>
        <description>Country Code alpha-3 - e.g. GBR</description>
        <label>Country Code alpha-3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>Full Country Name</description>
        <label>Country Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Country Mapping</label>
    <pluralLabel>Country Mapping</pluralLabel>
</CustomObject>